--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -23,7 +23,7 @@
     height: 70px;
 }
 
-.label-profile{
+.labelProfile{
     color: #808080;
     display: flex;
     margin: 10px 45px 5px -10px;
