--- a/src/components/TransactionHistory/TransactionHistory.css
+++ b/src/components/TransactionHistory/TransactionHistory.css
@@ -3,8 +3,7 @@
     flex-direction: row;
 }
 
-.transaction-column,
-.transaction-columnTwo{
+.transactionColumn{
     background-color: #00a2ff;
     color: #ffffff;
     width: 300px;
@@ -16,13 +15,19 @@
     text-transform: uppercase;
 }
 
-.transaction-columnTwo{
-    border: none;
+.transactionColumnTwo{
+    background-color: #00a2ff;
+    color: #ffffff;
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    border-right: 1px solid #949494;
 }
 
-.transaction-line,
-.transaction-lineTwo{
-    background-color: #ffffff;
+.transactionLine{
     color: #757575;
     width: 300px;
     height: 50px;
@@ -34,6 +39,10 @@
     margin-top: -2px;
 }
 
-.transaction-lineTwo{
+.transaction:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+.transaction:nth-child(even) {
     background-color: #d6d6d6;
 }
