--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   background-color: #818181;
-  height: 800px;
+  
 }
 
 .TaskOne{
@@ -11,12 +11,12 @@
 
 .TaskTwo{
   color: #ffffff;
-  margin: 50px 0 -40px 530px
+  margin: -280px 0 -50px 550px
 }
 
 .TaskThree{
   color: #ffffff;
-  margin: -320px 0 50px 1060px
+  margin: -350px 0 50px 1060px
 }
 
 .TaskFour{
@@ -31,7 +31,6 @@
   width: 280px;
   height: 300px;
   color: #000000;
-  float: left;
   text-align: center;
 }
 
@@ -40,18 +39,11 @@
   height: 280px;
   color: #000000;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  margin: 50px 0 0 455px;
 }
 
 .Friends {
   margin-left: 890px;
   display: flex;
   color: #000000;
-}
-
-.Transaction {
-  display: flex;
-  margin-left: 7px;
 }
